test/js/node/test/parallel/test-stream-filter.js.log.txt
 8 | const { once } = require('events');
 9 | const { setTimeout } = require('timers/promises');
10 | 
11 | {
12 |   // Filter works on synchronous streams with a synchronous predicate
13 |   const stream = Readable.from([1, 2, 3, 4, 5]).filter((x) => x < 3);
                                                     ^
TypeError: undefined is not a function
      at filter (node:stream:55:20)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-filter.js:13:49
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
